fixed contact page not showing from about page

--- a/index.css
+++ b/index.css
@@ -685,6 +685,7 @@ select:-webkit-autofill:focus {
   display: flex;
   justify-content: center;
   top: 90%;
+  /* top: 0; */
   width: 70%;
   max-width: 400px;
   height: 30px;
@@ -831,8 +832,10 @@ select:-webkit-autofill:focus {
   width: 1px;
   height: 1px;
   background: white;
+  /* background: yellow; */
   opacity: 0;
   z-index: 50;
+  margin-bottom: 2.1px;
 }
 
 
